# InvestIQ

./: .dockerignore  .env  .gitignore  BACKEND_ALIGNMENT.md  BACKEND_DATABASE_USAGE.md  BACKEND_PUSH_CHECKLIST.md  BRANCH_STRATEGY.md  DOCKER_HUB_FIX.md  EKS_DATABASE_STATUS.md  ENV_SETUP.md  FIX_EBS_CSI_DRIVER.md  INFRA_MONITORING_UPDATE.md  INITIAL_SETUP.md  LOCAL_DEV_DEMO.md  PRESENTATION_5MIN.md  PRESENTATION_CHEATSHEET.md  PRESENTATION_PREP.sh  PRESENTATION_QUICK_REF.md  QUICK_DEMO.sh  README.md  START_DEMO.sh  VERIFICATION_FLOW.md  WHEN_YOU_RETURN.md  app.py  check-status.sh  db_config.py  docker-compose.example.yml  main.py  requirements.txt  test_llm_service.py
backend/: .env.example  QUICK_START.md  app.py  logging.py  pyproject.toml
backend/db/: db.py
backend/llm-service/: README.md  main.py
backend/models/: Transcation.py  ledger.py  notification_model.py  transaction_model.py
backend/providers/: transactions.py
backend/routers/: transaction_router.py
backend/schemas/: transaction.py  verification.py
backend/scripts/: README.md  init_database.py  load_csv_data.py
backend/services/: detection_services.py  email_service.py  notification_service.py  transaction_service.py  verification_service.py
data/: README.md  dummy_transactions.csv
docs/: ACTION_PLAN.md  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  DATABASE_SETUP.md  DEPLOYMENT.md  SECURITY.md  SETUP.md
frontend/: package-lock.json  package.json  tailwing.config.ts
hackproject/: pyvenv.cfg
infra/: AWS_PROFILE_NOTES.md  DEPLOY_TO_EKS.md  DOCKER_IMAGE_SETUP.md  README.md  deploy-all.sh  (+2 more)
(+43 files in other folders)
